# ASC-ODE

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  README.md  genindex.html  intro.html  search.html  searchindex.js
_sources/: intro.md
demos/: test_alpha.cpp  test_newmark.cpp  test_ode.cpp
mass_spring/: CMakeLists.txt  bind_mass_spring.cpp  mass_spring.cpp  mass_spring.hpp  mass_spring.ipynb  test_mass_spring.py
src/: CMakeLists.txt  Newton.hpp  implicitRK.hpp  nonlinfunc.hpp  ode.hpp  timestepper.hpp
